adjusting swagger
